Bug 410218 - Wrong display of exceptions in activity diagrams Default setting for Association lines unequal to "Polyline
Summary: Wrong display of exceptions in activity diagrams Default setting for Associat...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-26 06:17 UTC by Ralf Habacker
Modified: 2019-07-26 06:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.28.90 (KDE Applications 19.07.90)
Sentry Crash Report:


Attachments
screenshot (20.82 KB, image/png)
2019-07-26 06:17 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-07-26 06:17:25 UTC
Created attachment 121735 [details]
screenshot

Exceptions are displayed as on http://www.c-jump.com/CIT73/Week05/W05_0160_uml.htm_0160_uml.htm.

This does not work if the default layout setting for new relationship lines is not equal to "Polyline".

STEPS TO REPRODUCE
1. start umbrello
2. open settings
3. on the main page set default value for "create new association lines as" to a value unequal to "Polyline"
4. Add an activity diagram
5. add two activities
6. connect them with an exception

OBSERVED RESULT
The association line does not look like an exception

EXPECTED RESULT
The association line should indicate an exception
Comment 1 Ralf Habacker 2019-07-26 06:27:12 UTC
Git commit 02585f54ead2ecf6f78d8c8d6a56c9e2ba040809 by Ralf Habacker.
Committed on 26/07/2019 at 06:26.
Pushed by habacker into branch 'Applications/19.08'.

Fix 'Wrong display of exceptions in activity diagrams Default setting for Association lines unequal to "Polyline"'
FIXED-IN:2.28.90 (KDE Applications 19.07.90)

M  +4    -2    umbrello/menus/associationwidgetpopupmenu.cpp
M  +2    -1    umbrello/umlwidgets/associationline.cpp
M  +13   -1    umbrello/umlwidgets/associationwidget.cpp
M  +2    -0    umbrello/umlwidgets/associationwidget.h

https://commits.kde.org/umbrello/02585f54ead2ecf6f78d8c8d6a56c9e2ba040809