Fix 'Wrong display of exceptions in activity diagrams Default setting for Association lines unequal to "Polyline"'

BUG:410218
FIXED-IN:2.28.90 (KDE Applications 19.07.90)